# argx

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile.sh  gen.sh  style
.private/: project.json
inc/: ARGXAddError.hpp  Argx.hpp  macros.hpp  types.hpp
src/: Argx.cpp
tests/: main.cpp
